messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging-app
  template:
    metadata:
      labels:
        app: django-messaging-app
    spec:
      containers:
      - name: django-container
        image: messaging_app-web:latest  # Replace with a different Docker image name
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  selector:
    app: django-messaging-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP  # Internal access only
