messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 127.0.0.1  # Replace with your actual domain or use a bare IP for testing
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: django-messaging-service
            port:
              number: 8000
